----------
v6.2.0-git
----------

[mms] Add mailbox size information retrieval to dynamic view (Request #12965).
[mms] Display unread message count in title via favicon bubbles, if browser
      supports.
[mms] Abstracted maillog code.
[mms] Enable configuration of IMAP cache lifetime for Horde_Cache and
      Hashtable backends.
[mms] Only refresh quota information when switching to a mailbox the first
      time.
[mms] More efficiently store mailbox cache information in the session.
[mms] Load copy/move mailbox selection list on-demand in smartmobile view.
[mms] Cache results of inline image view status.
[mjr] Add IMP_Api::logRecipient.
[mms] Remove the mail_domain preference.
[mjr] Add display of reccurence data to iTip viewer (Request #12919).
[mms] Allow HTML data to be pasted within HTML compose editor paste dialog.
[mms] Filter outgoing HTML compose messages for XSS vulnerabilities.
[mms] Add permission to limit the maximum body size of a composed message.
[mms] Show placeholder image when dropping onto HTML editor while the image is
      uploaded to the server.
[mms] Add rate limiting to new mail notification alerts to prevent flooding of
      the remote mail server (Request #12705).
[mms] Browser stored preferences are now prefixed by user information.
[mms] Strip PGP armor text when replying to a message.
[mms] Move determination whether to scan plaintext messages for PGP data from
      preferences to MIME viewer configuration.
[mms] Add copy email option to the address context menu in dynamic view.
[mms] Better reporting of e-mail address errors when composing.
[mms] Add list information display to dynamic view.
[jan] Add signatures display to compose view.
[mms] Add keyboard shortcuts to allow a more granular scroll of the dynamic
      preview pane (Request #12750).
[mms] Add country flag graphic to contact image information in dynamic view.
[mms] Address autocompleter on dynamic and basic page now uses a fancy UI.