@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Add smiley data to message when added via the HTML editor (Request #13051).
 * [mms] Add mailbox size information retrieval to dynamic view (Request #12965).
 * [mms] Display unread message count in title via favicon bubbles, if browser supports.
 * [mms] Abstracted maillog code.
