@@ -2,6 +2,8 @@
 v6.2.0-git
 ----------
 
+[mms] Add smiley data to message when added via the HTML editor (Request
+      #13051).
 [mms] Add mailbox size information retrieval to dynamic view (Request #12965).
 [mms] Display unread message count in title via favicon bubbles, if browser
       supports.
